Fix system menu not appearing when clicking the corner of popup windows.

On Windows the system menu is expected to appear on a single left-click
to the top-left corner of the window, and a double click is expected to
close the window. The Views window icon added by custom titlebar was
intercepting the click and so the WM_NCLBUTTONDOWN message was not
getting DefWindowProc'ed. This patch fixes this by disabling event
handling on that icon, as it isn't supposed to do anything.

Bug: 828429
Change-Id: I1ee0cfe38707479948b51eed48da83639964a7ae
Reviewed-on: https://chromium-review.googlesource.com/1011544
Reviewed-by: Peter Boström <pbos@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550472}
Former-commit-id: 0d969695fcd4ef5a32925f760b909adc891ba90f